# CairoGameDev

./: .gitignore  Cargo.toml  README.md  Scarb.toml
assets/: duck_idle.aseprite  room.aseprite  room_background.aseprite
assets/aseprite/: object_bookcase.aseprite  object_cupboard.aseprite  object_door.aseprite  object_window.aseprite
client/: Cargo.toml
client/assets/aseprite/: object_painting.aseprite  object_table.aseprite
client/src/: character.rs  configs.rs  dojo.rs  lib.rs  main.rs  resources.rs  room.rs
contract/: Scarb.toml
contract/src/: actions.cairo
contracts/src/: components.cairo  init.cairo  lib.cairo
src/: actions.cairo  character.rs  components.cairo  configs.rs  dojo.rs  dojo_new.rs  events.cairo  lib.cairo  lib.rs  main.rs  models.cairo  resources.rs  room.rs  systems.cairo  ui.rs
