[package]
name = "game_demo"
version = "0.1.0"
edition = "2021"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version = "0.11.3", features = ["dynamic_linking"]}
bevy_asset_loader = {version = "0.17.0", features = ["2d"]}
starknet = "0.6.0"
bevy-inspector-egui = "0.20"
bevy_pancam = "0.9.0"
bevy_prototype_debug_lines = "0.11.1"
bevy_rapier2d = "0.22.0"
bevy-tokio-tasks = "0.11"
dojo-world = { git = "https://github.com/dojoengine/dojo", tag = "v0.3.1", features = ["contracts"]}
dojo-types = { git = "https://github.com/dojoengine/dojo", tag = "v0.3.1"}
eyre = "0.6"
num = "0.4"
rand = "0.8.5"
tokio = { version = "1", features = ["sync"] }
url = "2.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
futures-lite = "1.13.0"
hex = "0.4.3"